--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -255,6 +255,7 @@ summary {
 /* THEME */
 /* Colors */
 /* Border radius */
+/* Shadows */
 /* Typography */
 /* General */
 body {
@@ -263,6 +264,59 @@ body {
   color: #1c1c1c;
 }
 
+/* GLOBAL */
 /* COMPONENTS */
+.app {
+  width: 600px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.items-list h1 {
+  font-size: 1.5rem;
+}
+
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 0;
+  border-top: 1px solid #ededed;
+  background-color: #ffffff;
+}
+.item h2 {
+  font-size: 1.25rem;
+  margin: 0;
+  margin-bottom: 0.25rem;
+}
+.item .units-controller {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.item .units-controller .units {
+  font-size: 1.25rem;
+  margin-right: 0.5rem;
+}
+.item .units-controller Button {
+  margin-left: 0.5rem;
+}
+
+.btn {
+  border: 1px solid rgb(220, 236, 220);
+  border-radius: 0.5rem;
+  background-color: rgb(220, 236, 220);
+  color: rgb(0, 154, 36);
+}
+.btn.icon-btn {
+  width: 2.5rem;
+  height: 2.5rem;
+  padding-top: 4px;
+}
+.btn .icon {
+  width: 1.25rem;
+  height: 1.25rem;
+}
 
 /*# sourceMappingURL=index.css.map */
