--- a/src/styles/scss/base/_theme.scss
+++ b/src/styles/scss/base/_theme.scss
@@ -1,6 +1,6 @@
 /* Colors */
 $color-black: #1c1c1c;
-$color-gray: #a2a2a2;
+$color-gray: #9e9e9e;
 $color-light-gray: #ededed;
 $color-white: #ffffff;
 $color-red: rgb(240, 35, 35);
@@ -12,8 +12,12 @@ $color-light-green: rgb(220, 236, 220);
 $color-border: $color-black;
 
 /* Border radius */
-$radius-sm: 0.375rem;
-$radius-md: 0.5rem;
+$radius-sm: 0.5rem;
+$radius-md: 0.75rem;
+
+/* Shadows */
+$shadow-sm: 0px 0px 6px rgba(69, 69, 69, 0.1);
+$shadow-md: 0px 0px 12px rgba(69, 69, 69, 0.5);
 
 /* Typography */
 $title-1: 1.5rem;
@@ -26,6 +30,6 @@ $color-text: $color-black;
 
 body {
 	font-family: system-ui, -apple-system, sans-serif;
-	background-color: $color-background;
+	background-color: $color-white;
 	color: $color-black;
 }
