--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -308,6 +308,7 @@ body {
   border-radius: 0.5rem;
   background-color: rgb(220, 236, 220);
   color: rgb(0, 154, 36);
+  cursor: pointer;
 }
 .btn.icon-btn {
   width: 2.5rem;
@@ -317,6 +318,12 @@ body {
 .btn .icon {
   width: 1.25rem;
   height: 1.25rem;
+}
+.btn:disabled {
+  background-color: #ededed;
+  border-color: #ededed;
+  color: #9e9e9e;
+  cursor: auto;
 }
 
 /*# sourceMappingURL=index.css.map */
