--- a/src/styles/scss/components/_Button.scss
+++ b/src/styles/scss/components/_Button.scss
@@ -3,6 +3,7 @@
 	border-radius: $radius-sm;
 	background-color: $color-light-green;
 	color: $color-green;
+	cursor: pointer;
 
 	&.icon-btn {
 		width: 2.5rem;
@@ -13,5 +14,12 @@
 	.icon {
 		width: 1.25rem;
 		height: 1.25rem;
+	}
+
+	&:disabled {
+		background-color: $color-light-gray;
+		border-color: $color-light-gray;
+		color: $color-gray;
+		cursor: auto;
 	}
 }
