--- a/src/styles/scss/components/_Button.scss
+++ b/src/styles/scss/components/_Button.scss
@@ -1,25 +1,37 @@
 .btn {
-	border: 1px solid $color-light-green;
 	border-radius: $radius-sm;
-	background-color: $color-light-green;
-	color: $color-green;
+	height: 2.5rem;
+	padding: 0.25rem 1rem;
 	cursor: pointer;
 
-	&.icon-btn {
+	&.btn-icon {
 		width: 2.5rem;
 		height: 2.5rem;
-		padding-top: 4px;
+		padding: 4px;
+
+		.icon {
+			margin-top: 3px;
+			width: 1.15rem;
+			height: 1.15rem;
+		}
 	}
 
-	.icon {
-		width: 1.25rem;
-		height: 1.25rem;
+	&.btn-primary {
+		border: 1px solid $color-green;
+		background-color: $color-green;
+		color: $color-white;
 	}
 
-	&:disabled {
-		background-color: $color-light-gray;
-		border-color: $color-light-gray;
-		color: $color-gray;
-		cursor: auto;
+	&.btn-secondary {
+		border: 1px solid $color-light-green;
+		background-color: $color-light-green;
+		color: $color-green;
 	}
+}
+
+.btn:disabled {
+	background-color: $color-light-gray;
+	border-color: $color-light-gray;
+	color: $color-gray;
+	cursor: auto;
 }
