--- a/src/styles/scss/base/_reset.scss
+++ b/src/styles/scss/base/_reset.scss
@@ -287,3 +287,16 @@ Add the correct display in Chrome and Safari.
 summary {
 	display: list-item;
 }
+
+/*
+CUSTOM
+*/
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+}
