--- a/src/styles/scss/components/_ItemsList.scss
+++ b/src/styles/scss/components/_ItemsList.scss
@@ -1,5 +1,16 @@
 .items-list {
-	h1 {
-		font-size: $title-1;
+	width: 600px;
+	max-width: 100%;
+	margin: 0 auto;
+	padding: 0 1rem;
+
+	.header {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 1rem 0;
+		h1 {
+			font-size: $title-1;
+		}
 	}
 }
