--- a/src/styles/scss/components/_Modal.scss
+++ b/src/styles/scss/components/_Modal.scss
@@ -23,6 +23,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
+			margin-bottom: 1.5rem;
 
 			h1 {
 				font-size: $title-2;
