--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -333,25 +333,41 @@ body {
 }
 .btn.btn-icon .icon {
   margin-top: 3px;
-  width: 1.15rem;
-  height: 1.15rem;
+  width: 1.25rem;
+  height: 1.25rem;
 }
 .btn.btn-primary {
   border: 1px solid rgb(0, 154, 36);
   background-color: rgb(0, 154, 36);
   color: #ffffff;
 }
+.btn.btn-primary:hover {
+  background-color: #00811e;
+  border-color: #00811e;
+}
 .btn.btn-secondary {
   border: 1px solid rgb(220, 236, 220);
   background-color: rgb(220, 236, 220);
   color: rgb(0, 154, 36);
 }
-
+.btn.btn-secondary:hover {
+  background-color: #cbe3cb;
+  border-color: #cbe3cb;
+}
+.btn.btn-nobg {
+  border: transparent;
+  background-color: transparent;
+  color: rgb(0, 154, 36);
+}
+.btn.btn-nobg:hover {
+  background-color: rgb(220, 236, 220);
+  border-color: rgb(220, 236, 220);
+}
 .btn:disabled {
   background-color: #ededed;
   border-color: #ededed;
   color: #9e9e9e;
-  cursor: auto;
+  pointer-events: none;
 }
 
 .modal-overlay {
@@ -375,9 +391,75 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
 .modal-window .header h1 {
   font-size: 1.25rem;
+}
+
+.creation-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.creation-form .buttons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 1.25rem;
+}
+.creation-form .buttons Button {
+  margin-left: 0.75rem;
+}
+
+.label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.input {
+  padding: 0.25rem 1rem;
+  border: 1px solid #9e9e9e;
+  border-radius: 0.5rem;
+  height: 2.5rem;
+  width: 100%;
+}
+
+.error {
+  border-color: rgb(240, 35, 35);
+}
+
+.errorText {
+  font-size: 0.875rem;
+  display: block;
+  margin-top: 0.5rem;
+  color: rgb(240, 35, 35);
+}
+
+.select .label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.select .wrapper {
+  position: relative;
+}
+.select .select {
+  cursor: pointer;
+  padding: 0 0.75rem;
+  padding-right: 2.5rem;
+  border: 1px solid #9e9e9e;
+  border-radius: 0.5rem;
+  appearance: none;
+  height: 2.5rem;
+  width: 100%;
+}
+.select .icon {
+  pointer-events: none;
+  position: absolute;
+  width: 1.25rem;
+  right: 12px;
+  top: 0.75rem;
+  color: rgb(0, 154, 36);
 }
 
 /*# sourceMappingURL=index.css.map */
