--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -13,3 +13,6 @@
 @import 'components/Item';
 @import 'components/Button';
 @import 'components/Modal';
+@import 'components/CreationForm';
+@import 'components/Input';
+@import 'components/Select';
