Create logic for item creation form

--- a/src/styles/scss/components/_Button.scss
+++ b/src/styles/scss/components/_Button.scss
@@ -48,9 +48,9 @@
 		}
 	}
 	&:disabled {
-		background-color: $color-light-gray;
-		border-color: $color-light-gray;
-		color: $color-gray;
+		background-color: $color-gray-1;
+		border-color: $color-gray-1;
+		color: $color-gray-2;
 		pointer-events: none;
 	}
 }
