--- a/src/styles/scss/components/_Select.scss
+++ b/src/styles/scss/components/_Select.scss
@@ -12,7 +12,7 @@
 		cursor: pointer;
 		padding: 0 0.75rem;
 		padding-right: 2.5rem;
-		border: 1px solid $color-gray;
+		border: 1px solid $color-gray-2;
 		border-radius: $radius-sm;
 		appearance: none;
 		height: 2.5rem;
