--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -277,6 +277,10 @@ body {
 }
 
 /* GLOBAL */
+*:focus {
+  outline-color: rgb(0, 154, 36);
+}
+
 /* COMPONENTS */
 .items-list {
   width: 600px;
@@ -288,7 +292,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 0;
+  padding: 1.25rem 0;
 }
 .items-list .header h1 {
   font-size: 1.5rem;
@@ -366,7 +370,7 @@ body {
 .btn:disabled {
   background-color: #ededed;
   border-color: #ededed;
-  color: #9e9e9e;
+  color: #bebebe;
   pointer-events: none;
 }
 
@@ -375,13 +379,15 @@ body {
   inset: 0;
   height: 100vh;
   width: 100vw;
+  padding: 1rem;
   background-color: rgba(28, 28, 28, 0.75);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .modal-window {
-  width: 90vw;
+  width: 600px;
+  max-width: 100%;
   background-color: #ffffff;
   border-radius: 0.75rem;
   padding: 1.5rem;
@@ -402,6 +408,11 @@ body {
   flex-direction: column;
   gap: 1rem;
 }
+.creation-form label .message {
+  margin-bottom: 0.5rem;
+  font-size: 0.875rem;
+  color: rgb(240, 35, 35);
+}
 .creation-form .buttons {
   display: flex;
   align-items: center;
@@ -412,24 +423,21 @@ body {
   margin-left: 0.75rem;
 }
 
-.label {
+label .label {
   display: block;
   margin-bottom: 0.5rem;
 }
-
-.input {
+label .input {
   padding: 0.25rem 1rem;
-  border: 1px solid #9e9e9e;
+  border: 1px solid #bebebe;
   border-radius: 0.5rem;
   height: 2.5rem;
   width: 100%;
 }
-
-.error {
+label .error {
   border-color: rgb(240, 35, 35);
 }
-
-.errorText {
+label .errorText {
   font-size: 0.875rem;
   display: block;
   margin-top: 0.5rem;
@@ -447,7 +455,7 @@ body {
   cursor: pointer;
   padding: 0 0.75rem;
   padding-right: 2.5rem;
-  border: 1px solid #9e9e9e;
+  border: 1px solid #bebebe;
   border-radius: 0.5rem;
   appearance: none;
   height: 2.5rem;
