--- a/src/styles/scss/base/_theme.scss
+++ b/src/styles/scss/base/_theme.scss
@@ -1,7 +1,7 @@
 /* Colors */
 $color-black: #1c1c1c;
-$color-gray: #9e9e9e;
-$color-light-gray: #ededed;
+$color-gray-2: #bebebe;
+$color-gray-1: #ededed;
 $color-white: #ffffff;
 $color-red: rgb(240, 35, 35);
 $color-green: rgb(0, 154, 36);
