--- a/src/styles/scss/components/_CreationForm.scss
+++ b/src/styles/scss/components/_CreationForm.scss
@@ -3,6 +3,14 @@
 	flex-direction: column;
 	gap: 1rem;
 
+	label {
+		.message {
+			margin-bottom: 0.5rem;
+			font-size: 0.875rem;
+			color: $color-red;
+		}
+	}
+
 	.buttons {
 		display: flex;
 		align-items: center;
