--- a/src/styles/scss/components/_Item.scss
+++ b/src/styles/scss/components/_Item.scss
@@ -3,7 +3,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 0.75rem 0;
-	border-top: 1px solid $color-light-gray;
+	border-top: 1px solid $color-gray-1;
 	background-color: $color-white;
 
 	h2 {
