--- a/src/styles/scss/components/_Modal.scss
+++ b/src/styles/scss/components/_Modal.scss
@@ -4,6 +4,7 @@
 		inset: 0;
 		height: 100vh;
 		width: 100vw;
+		padding: 1rem;
 
 		background-color: rgba($color-black, 0.75);
 
@@ -13,7 +14,8 @@
 	}
 
 	&-window {
-		width: 90vw;
+		width: 600px;
+		max-width: 100%;
 		background-color: $color-white;
 		border-radius: $radius-md;
 		padding: 1.5rem;
