--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -252,18 +252,6 @@ summary {
   display: list-item;
 }
 
-/*
-CUSTOM
-*/
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
 /* THEME */
 /* Colors */
 /* Border radius */
@@ -279,6 +267,15 @@ body {
 /* GLOBAL */
 *:focus {
   outline-color: rgb(0, 154, 36);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
 
 /* COMPONENTS */
@@ -303,25 +300,56 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0.75rem 0;
-  border-top: 1px solid #ededed;
+  border-top: 1px solid #efefef;
   background-color: #ffffff;
 }
 .item h2 {
-  font-size: 1.25rem;
-  margin: 0;
+  font-size: 1.125rem;
+  margin-right: 0.5rem;
   margin-bottom: 0.25rem;
+}
+.item .category {
+  margin-bottom: 0.25rem;
+}
+.item .days {
+  color: rgb(0, 154, 36);
+}
+.item .days.warning {
+  color: rgb(224, 134, 0);
+}
+.item .days.error {
+  color: rgb(240, 35, 35);
+}
+.item .days span {
+  font-size: 0.875rem;
+  font-weight: 400;
+  margin-left: 0.125rem;
 }
 .item .units-controller {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 4px;
 }
 .item .units-controller .units {
-  font-size: 1.25rem;
+  font-weight: 600;
+  color: rgb(0, 154, 36);
+  font-size: 1.5rem;
   margin-right: 0.5rem;
 }
+.item .units-controller .units.error {
+  color: rgb(240, 35, 35);
+}
+.item .units-controller .units.warning {
+  color: rgb(224, 134, 0);
+}
+.item .units-controller .units span {
+  font-size: 0.875rem;
+  font-weight: 400;
+  margin-left: 0.125rem;
+}
 .item .units-controller Button {
-  margin-left: 0.75rem;
+  margin-left: 0.5rem;
 }
 
 .btn {
@@ -368,8 +396,8 @@ body {
   border-color: rgb(220, 236, 220);
 }
 .btn:disabled {
-  background-color: #ededed;
-  border-color: #ededed;
+  background-color: #efefef;
+  border-color: #efefef;
   color: #bebebe;
   pointer-events: none;
 }
@@ -400,7 +428,7 @@ body {
   margin-bottom: 1.5rem;
 }
 .modal-window .header h1 {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
 }
 
 .creation-form {
@@ -468,6 +496,16 @@ label .errorText {
   right: 12px;
   top: 0.75rem;
   color: rgb(0, 154, 36);
+}
+
+.tag {
+  font-size: 0.75rem;
+  padding: 0.25rem 0.35rem;
+  border-radius: 0.375rem;
+  display: inline-block;
+  height: 1.375rem;
+  background-color: #efefef;
+  color: #888888;
 }
 
 /*# sourceMappingURL=index.css.map */
