--- a/src/styles/scss/base/_theme.scss
+++ b/src/styles/scss/base/_theme.scss
@@ -1,28 +1,32 @@
 /* Colors */
 $color-black: #1c1c1c;
+$color-gray-3: #888888;
 $color-gray-2: #bebebe;
-$color-gray-1: #ededed;
+$color-gray-1: #efefef;
 $color-white: #ffffff;
 $color-red: rgb(240, 35, 35);
 $color-green: rgb(0, 154, 36);
 $color-blue: rgb(28, 73, 254);
+$color-orange: rgb(224, 134, 0);
 $color-light-blue: rgb(226, 236, 254);
 $color-light-orange: rgb(255, 239, 212);
 $color-light-green: rgb(220, 236, 220);
 $color-border: $color-black;
 
 /* Border radius */
-$radius-sm: 0.5rem;
 $radius-md: 0.75rem;
+$radius-sm: 0.5rem;
+$radius-xs: 0.375rem;
 
 /* Shadows */
-$shadow-sm: 0px 0px 6px rgba(69, 69, 69, 0.1);
 $shadow-md: 0px 0px 12px rgba(69, 69, 69, 0.5);
+$shadow-sm: 0px 0px 6px rgba(69, 69, 69, 0.1);
 
 /* Typography */
 $title-1: 1.5rem;
-$title-2: 1.25rem;
+$title-2: 1.125rem;
 $text-sm: 0.875rem;
+$text-xs: 0.75rem;
 
 /* General */
 $color-background: $color-white;
