--- a/src/styles/scss/components/_Button.scss
+++ b/src/styles/scss/components/_Button.scss
@@ -42,7 +42,8 @@
 		background-color: transparent;
 		color: $color-green;
 
-		&:hover {
+		&:hover,
+		&:focus {
 			background-color: $color-light-green;
 			border-color: $color-light-green;
 		}
