--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -279,19 +279,20 @@ h6 {
 }
 
 /* COMPONENTS */
-.items-list {
+.manager {
   width: 600px;
   max-width: 100%;
   margin: 0 auto;
   padding: 0 1rem;
 }
-.items-list .header {
+
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1.25rem 0;
 }
-.items-list .header h1 {
+.header h1 {
   font-size: 1.5rem;
 }
 
@@ -363,17 +364,18 @@ h6 {
   right: 0;
   top: 2rem;
   color: rgb(0, 154, 36);
+  min-width: 148px;
 }
 .item .controls .dropdown li {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
   padding: 0.75rem 1rem;
   border-radius: 0.5rem;
   cursor: pointer;
 }
 .item .controls .dropdown li:hover {
   background-color: rgb(220, 236, 220);
-}
-.item .controls .dropdown .icon {
-  margin-right: 0.5rem;
 }
 
 .btn {
@@ -445,33 +447,42 @@ h6 {
   padding: 1.5rem;
   min-height: 8rem;
 }
-.modal-window .header {
+.modal-window-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.75rem;
 }
-.modal-window .header h1 {
-  font-size: 1.125rem;
+.modal-window-header h1 {
+  font-size: 1.5rem;
 }
-
-.creation-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.creation-form label .message {
-  margin-bottom: 0.5rem;
-  font-size: 0.875rem;
-  color: rgb(240, 35, 35);
-}
-.creation-form .buttons {
+.modal-window-footer {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   margin-top: 1.25rem;
 }
-.creation-form .buttons Button {
+.modal-window-footer Button {
+  margin-left: 0.75rem;
+}
+
+.create-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.create-form label .message {
+  margin-bottom: 0.5rem;
+  font-size: 0.875rem;
+  color: rgb(240, 35, 35);
+}
+.create-form .buttons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 1.25rem;
+}
+.create-form .buttons Button {
   margin-left: 0.75rem;
 }
 
