--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -9,11 +9,12 @@
 
 /* COMPONENTS */
 @import 'components/App';
-@import 'components/ItemsList';
+@import 'components/Manager';
+@import 'components/Header';
 @import 'components/Item';
 @import 'components/Button';
 @import 'components/Modal';
-@import 'components/CreationForm';
+@import 'components/CreateForm';
 @import 'components/Input';
 @import 'components/Select';
 @import 'components/Tag';
