--- a/src/styles/scss/base/_global.scss
+++ b/src/styles/scss/base/_global.scss
@@ -10,3 +10,14 @@ h5,
 h6 {
 	margin: 0;
 }
+
+.form-buttons {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	margin-top: 2rem;
+
+	Button {
+		margin-left: 0.75rem;
+	}
+}
