Create edit item form and list update logic

--- a/src/styles/scss/components/_Button.scss
+++ b/src/styles/scss/components/_Button.scss
@@ -47,6 +47,11 @@
 			background-color: $color-light-green;
 			border-color: $color-light-green;
 		}
+
+		&:focus {
+			background-color: $color-gray-1;
+			color: $color-gray-2;
+		}
 	}
 	&:disabled {
 		background-color: $color-gray-1;
