--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -370,7 +370,7 @@ h6 {
   border-radius: 0.5rem;
   box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.15);
   list-style: none;
-  z-index: 999;
+  z-index: 1;
   right: 0;
   top: 2rem;
   color: rgb(0, 154, 36);
@@ -430,6 +430,10 @@ h6 {
 .btn.btn-nobg:hover, .btn.btn-nobg:focus {
   background-color: rgb(220, 236, 220);
   border-color: rgb(220, 236, 220);
+}
+.btn.btn-nobg:focus {
+  background-color: #efefef;
+  color: #bebebe;
 }
 .btn:disabled {
   background-color: #efefef;
