--- a/src/styles/scss/components/_Item.scss
+++ b/src/styles/scss/components/_Item.scss
@@ -75,7 +75,8 @@
 			list-style: none;
 			z-index: 1;
 			right: 0;
-			top: 2rem;
+			margin: 0;
+			top: 3rem;
 			color: $color-green;
 			min-width: 148px;
 
