--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -300,7 +300,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.25rem 0;
+  padding: 1rem 0;
 }
 .header h1 {
   font-size: 1.5rem;
@@ -544,6 +544,21 @@ label .errorText {
   height: 1.375rem;
   background-color: #efefef;
   color: #808080;
+}
+
+.toolbar {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.5rem;
+  column-gap: 1rem;
+  justify-content: space-between;
+}
+.toolbar .wrapper1 {
+  width: 43%;
+}
+.toolbar .wrapper2 {
+  display: flex;
+  column-gap: 1rem;
 }
 
 /*# sourceMappingURL=index.css.map */
